--- a/index.html
+++ b/index.html
@@ -1,3 +1,14 @@
-<html>
-  <h2>Chow Works coming soon....</h2>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>Home | Chow Works</title>
+  <base href="/">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script src="https://use.fontawesome.com/8d0f831f44.js"></script>
+<link rel="stylesheet" href="styles.d4dc3039ea70cc577c70.css"></head>
+<body>
+  <app-root></app-root>
+<script src="runtime.e227d1a0e31cbccbf8ec.js" defer></script><script src="polyfills.a4021de53358bb0fec14.js" defer></script><script src="main.5563b41cb76ebde633ae.js" defer></script></body>
 </html>
