--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
   <meta charset="utf-8">
   <title>Home | Chow Works</title>
-  <base href="https://www.chrishoward.guru/">  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <base href="https://www.chrishoward.guru/">  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <script src="https://use.fontawesome.com/8d0f831f44.js"></script>
-<link rel="stylesheet" href="styles.d4dc3039ea70cc577c70.css"></head>
+<link rel="stylesheet" href="styles.db5eb027c5f5589ac17c.css"></head>
 <body>
   <app-root></app-root>
-<script src="runtime.e227d1a0e31cbccbf8ec.js" defer></script><script src="polyfills.a4021de53358bb0fec14.js" defer></script><script src="main.777190ba9de2969ec799.js" defer></script></body>
+<script src="runtime.e227d1a0e31cbccbf8ec.js" defer></script><script src="polyfills.a4021de53358bb0fec14.js" defer></script><script src="scripts.b285225015c26ee74743.js" defer></script><script src="main.7f9ff2f1cc7e01ed23c8.js" defer></script></body>
 </html>
