--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-24871749-3"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-24871749-3');
+  </script>
+
   <meta charset="utf-8">
   <title>Home | Chow Works</title>
   <base href="https://www.chrishoward.guru/">  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
