Still tryna fix it.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <base href="https://www.chrishoward.guru/">  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <script src="https://use.fontawesome.com/8d0f831f44.js" crossorigin="anonymous" SameSite="none Secure"></script>
+  <script src="https://use.fontawesome.com/8d0f831f44.js" crossorigin="anonymous" SameSite="none"></script>
 <link rel="stylesheet" href="styles.6e6d9bb74c3b1b5d0f1f.css"></head>
 <body>
   <app-root></app-root>
